update RSS et fix topModule z-index

--- a/src/css/contentTopmodule.css
+++ b/src/css/contentTopmodule.css
@@ -16,7 +16,12 @@
     display: block;
     
     position: absolute;
-    top: 0;
+    
+    top: 0; 
+    left: 0;
+    right: 0;
+
+    z-index: 990;
 }
 
 #content>#TopModule>.visible {
